version updates, openapi suggest, JwtAuthenticator, grpc api auth
